--- a/index.html
+++ b/index.html
@@ -2,150 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sports Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>General Knowledge Quiz</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #2193b0, #6dd5ed);
-      color: #fff;
-      padding: 30px;
       margin: 0;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-      text-shadow: 2px 2px 4px #000;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f7f0ac, #acf7f0);
+      color: #000;
     }
     .quiz-container {
+      background: linear-gradient(to right, #f7f0ac, #acf7f0);
       max-width: 800px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 25px;
+      margin: 60px auto;
+      padding: 30px;
       border-radius: 15px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      text-align: center;
     }
     .question {
+      font-size: 24px;
       margin-bottom: 20px;
+      color: #004d40;
     }
-    .question p {
-      font-weight: bold;
-    }
-    label {
+    .options label {
       display: block;
-      margin-bottom: 5px;
-      cursor: pointer;
-    }
-    button {
-      background: #fff;
-      color: #2193b0;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      font-weight: bold;
+      font-size: 22px;
+      margin-bottom: 10px;
+      padding: 12px;
       border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
+      background-color: #b2ebf2;
+      transition: background-color 0.3s;
+    }
+    .options input[type="radio"] {
+      display: none;
+    }
+    .options label:hover {
+      background-color: #80deea;
+    }
+    .options label.correct {
+      background-color: #a5d6a7;
+      color: #004d40;
+    }
+    .options label.incorrect {
+      background-color: #ef9a9a;
+      color: #b71c1c;
+    }
+    .next-button, .submit-button {
+      background-color: #00796b;
+      color: white;
+      padding: 12px 24px;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
       margin-top: 20px;
     }
-    button:hover {
-      background: #eee;
+    .next-button:hover, .submit-button:hover {
+      background-color: #004d40;
     }
-    #result {
-      font-size: 20px;
+    .score-container {
+      text-align: center;
+      font-size: 26px;
       font-weight: bold;
       margin-top: 30px;
-      text-align: center;
+      color: #00796b;
     }
   </style>
 </head>
 <body>
-
-  <h1>🏆 Sports Quiz</h1>
-  <div class="quiz-container">
-    <form id="quizForm">
-      <!-- Questions Start -->
-      <!-- Format: questionText|CorrectAnswer -->
-
-      <!-- Question 1 -->
-      <div class="question">
-        <p>1. Which country has won the most FIFA World Cup titles in football?</p>
-        <label><input type="radio" name="q1" value="A"> A) Germany</label>
-        <label><input type="radio" name="q1" value="B"> B) Brazil</label>
-        <label><input type="radio" name="q1" value="C"> C) Argentina</label>
-        <label><input type="radio" name="q1" value="D"> D) France</label>
-      </div>
-
-      <!-- Question 2 -->
-      <div class="question">
-        <p>2. What is the national sport of Japan?</p>
-        <label><input type="radio" name="q2" value="A"> A) Karate</label>
-        <label><input type="radio" name="q2" value="B"> B) Judo</label>
-        <label><input type="radio" name="q2" value="C"> C) Sumo Wrestling</label>
-        <label><input type="radio" name="q2" value="D"> D) Kendo</label>
-      </div>
-
-      <!-- Question 3 -->
-      <div class="question">
-        <p>3. Who holds the record for the most Olympic gold medals?</p>
-        <label><input type="radio" name="q3" value="A"> A) Usain Bolt</label>
-        <label><input type="radio" name="q3" value="B"> B) Larisa Latynina</label>
-        <label><input type="radio" name="q3" value="C"> C) Michael Phelps</label>
-        <label><input type="radio" name="q3" value="D"> D) Carl Lewis</label>
-      </div>
-
-      <!-- Question 4 -->
-      <div class="question">
-        <p>4. How many players are there in a standard basketball team on the court?</p>
-        <label><input type="radio" name="q4" value="A"> A) 6</label>
-        <label><input type="radio" name="q4" value="B"> B) 5</label>
-        <label><input type="radio" name="q4" value="C"> C) 4</label>
-        <label><input type="radio" name="q4" value="D"> D) 7</label>
-      </div>
-
-      <!-- You can paste remaining 16 questions here using same format -->
-
-      <!-- Submit Button -->
-      <button type="button" onclick="checkAnswers()">Submit</button>
-    </form>
-
-    <div id="result"></div>
-  </div>
+  <div class="quiz-container" id="quiz"></div>
+  <div class="score-container" id="score"></div>
 
   <script>
-    const correctAnswers = {
-      q1: "B",
-      q2: "C",
-      q3: "C",
-      q4: "B",
-      q5: "B",
-      q6: "B",
-      q7: "B",
-      q8: "B",
-      q9: "A",
-      q10: "A",
-      q11: "B",
-      q12: "A",
-      q13: "B",
-      q14: "C",
-      q15: "A",
-      q16: "B",
-      q17: "C",
-      q18: "A",
-      q19: "C",
-      q20: "B"
-    };
+    const quizData = [
+      { question: "Which is the largest desert in the world?", options: ["Gobi Desert", "Arabian Desert", "Sahara Desert", "Kalahari Desert"], answer: 2 },
+      { question: "Where is the headquarters of the United Nations located?", options: ["Geneva, Switzerland", "Paris, France", "New York, United States", "London, United Kingdom"], answer: 2 },
+      { question: "Which is the deepest lake in the world?", options: ["Tanganyika", "Superior", "Lake Baikal", "Victoria"], answer: 2 },
+      { question: "What is the longest river in the world?", options: ["Amazon River", "Yangtze River", "Nile River", "Mississippi River"], answer: 2 },
+      { question: "Which is the highest mountain in the world?", options: ["K2", "Kangchenjunga", "Mount Everest", "Lhotse"], answer: 2 },
+      { question: "Who was the first President of the United States?", options: ["Abraham Lincoln", "Thomas Jefferson", "George Washington", "John Adams"], answer: 2 },
+      { question: "Who invented the telephone?", options: ["Nikola Tesla", "Thomas Edison", "Alexander Graham Bell", "Guglielmo Marconi"], answer: 2 },
+      { question: "What is the capital of Australia?", options: ["Sydney", "Melbourne", "Canberra", "Brisbane"], answer: 2 },
+      { question: "Which planet is known as the Red Planet?", options: ["Venus", "Jupiter", "Mars", "Mercury"], answer: 2 },
+      { question: "What is the national flower of Pakistan?", options: ["Rose", "Sunflower", "Jasmine", "Lily"], answer: 2 },
+      { question: "Which country is called the Land of the Rising Sun?", options: ["China", "Thailand", "Japan", "South Korea"], answer: 2 },
+      { question: "Who wrote the play 'Romeo and Juliet'?", options: ["Charles Dickens", "Leo Tolstoy", "William Shakespeare", "Mark Twain"], answer: 2 },
+      { question: "What is the chemical symbol of gold?", options: ["Ag", "Gd", "Au", "Go"], answer: 2 },
+      { question: "Which organ in the human body pumps blood?", options: ["Lungs", "Kidney", "Heart", "Liver"], answer: 2 },
+      { question: "What is the capital of Canada?", options: ["Toronto", "Vancouver", "Ottawa", "Montreal"], answer: 2 },
+      { question: "In which continent is the Sahara Desert located?", options: ["Asia", "Europe", "Africa", "North America"], answer: 2 },
+      { question: "Who discovered gravity?", options: ["Galileo Galilei", "Albert Einstein", "Isaac Newton", "Johannes Kepler"], answer: 2 },
+      { question: "What is the smallest prime number?", options: ["1", "3", "2", "0"], answer: 2 },
+      { question: "Which gas do plants absorb from the atmosphere?", options: ["Oxygen", "Nitrogen", "Carbon Dioxide", "Hydrogen"], answer: 2 },
+      { question: "Who was the founder of Microsoft?", options: ["Steve Jobs", "Mark Zuckerberg", "Bill Gates", "Elon Musk"], answer: 2 },
+      { question: "Which is the largest ocean in the world?", options: ["Atlantic Ocean", "Indian Ocean", "Pacific Ocean", "Arctic Ocean"], answer: 2 },
+      { question: "What is the square root of 144?", options: ["11", "10", "12", "14"], answer: 2 },
+      { question: "What is the currency of Japan?", options: ["Dollar", "Won", "Yen", "Ringgit"], answer: 2 },
+      { question: "Which is the hardest natural substance on Earth?", options: ["Steel", "Iron", "Diamond", "Quartz"], answer: 2 },
+      { question: "What is the capital city of France?", options: ["Rome", "Berlin", "Paris", "Madrid"], answer: 2 }
+    ];
 
-    function checkAnswers() {
-      let score = 0;
-      for (let i = 1; i <= 20; i++) {
-        const q = document.querySelector(`input[name="q${i}"]:checked`);
-        if (q && q.value === correctAnswers[`q${i}`]) {
-          score++;
-        }
-      }
-      document.getElementById("result").innerText = `✅ Your Score: ${score}/20`;
+    let currentQuestion = 0;
+    let score = 0;
+
+    const quizContainer = document.getElementById("quiz");
+    const scoreContainer = document.getElementById("score");
+
+    function loadQuestion() {
+      const q = quizData[currentQuestion];
+      quizContainer.innerHTML = `
+        <div class="question">${q.question}</div>
+        <div class="options">
+          ${q.options.map((option, i) => `
+            <label>
+              <input type="radio" name="option" value="${i}">
+              ${option}
+            </label>
+          `).join('')}
+        </div>
+        <button class="next-button" onclick="nextQuestion()">Next</button>
+      `;
     }
-  </script>
 
+    function nextQuestion() {
+      const selected = document.querySelector('input[name="option"]:checked');
+      if (!selected) return alert("Please select an answer before continuing.");
+
+      const isCorrect = parseInt(selected.value) === quizData[currentQuestion].answer;
+      const labels = document.querySelectorAll('.options label');
+      labels.forEach((label, i) => {
+        if (i === quizData[currentQuestion].answer) {
+          label.classList.add("correct");
+        } else if (i === parseInt(selected.value)) {
+          label.classList.add("incorrect");
+        }
+      });
+
+      if (isCorrect) score++;
+      currentQuestion++;
+
+      setTimeout(() => {
+        if (currentQuestion < quizData.length) {
+          loadQuestion();
+        } else {
+          showScore();
+        }
+      }, 1000);
+    }
+
+    function showScore() {
+      quizContainer.innerHTML = "";
+      scoreContainer.innerHTML = `Your Score: ${score}/${quizData.length}`;
+    }
+
+    loadQuestion();
+  </script>
 </body>
 </html>
